Fix font size for all posts on large devices
The size was set to 4vw, but this was too large and didn't look right,
so set to 2vw.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -180,6 +180,6 @@ and (min-device-width : 1025px) {
     padding: 0 2.5vw;
   }
   #text .worm-link {
-    font-size: 4vw;
+    font-size: 2vw;
   }
 }
